--- a/node/demo/uploadFile.html
+++ b/node/demo/uploadFile.html
@@ -7,9 +7,10 @@
   <title>上传文件</title>
 </head>
 <body>
-  <form action="http://localhost:3000/upload" method="post" enctype="multipart/form-data">
+  <form action="http://localhost:3000/upload" method="post" 
+  enctype="multipart/form-data">
     <p>
-      <input type="file" name="" id="">
+      <input type="file" name="file" id="file">
       <input type="submit" value="上传文件">
     </p>
   </form>
